--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% block title %}web app home{% endblock %}
+{% block title %}web app home v01{% endblock %}
 {% block contents %}
 <h1>web app home</h1>
 <br>
